Add feedback form, admin panel, responses

--- a/DVar.BLog.Api/appsettings.json
+++ b/DVar.BLog.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=dvar-b-log.db",
+    "PostgresSql": "Host=localhost;Port=5432;Database=DVar_BLog;Username=postgres;Password=1234;Encoding=UTF8;"
+  },
   "EmailSettings": {
     "SenderDisplayName": "DVar B-Log",
     "SenderEmail": "danilvar4@gmail.com",
