--- a/DVar.BLog.Infrastructure/DVar.BLog.Infrastructure.csproj
+++ b/DVar.BLog.Infrastructure/DVar.BLog.Infrastructure.csproj
@@ -16,6 +16,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     </ItemGroup>
 
     <ItemGroup>
