--- a/DVar.BLog.Infrastructure/DVar.BLog.Infrastructure.csproj
+++ b/DVar.BLog.Infrastructure/DVar.BLog.Infrastructure.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+      <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
     <ItemGroup>
